refactor(core): harden fieldAt path resolution and tidy write set locals
Resolve the component path in fieldAt without dereferencing a nullable
record type: descend only while a further index remains, and fail fast
with a descriptive error if an intermediate component is not a record.

Also tidy local declarations: infer diamond type arguments, use
SequencedCollection.removeLast(), and drop redundant raw-type casts.